[tool.poetry]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
description = "Japanese Wikipedia cleaner"
homepage = "https://github.com/hpprc/jawiki-cleaner"
name = "jawiki-cleaner"
readme = "README.md"
repository = "https://github.com/hpprc/jawiki-cleaner"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry.scripts]
jawiki-cleaner = "src.jawiki_cleaner.cli:main"
